--- a/template/BrowseBuyOrder.html
+++ b/template/BrowseBuyOrder.html
@@ -249,7 +249,7 @@
 			<span class="product-stat-label">$</span>
 			
 			<span class="product-stat-by-me shadow">
-				<a href="/buyorder/owner/{{b.owner.id()}}/">
+				<a href="/buyorder/browse?owner={{b.owner.id()}}">
 					<p class="product-list-item-footer-user" name="{{b.owner.get().nickname}}">{{ b.owner.get().nickname }}</p>
 				</a>
 			</span>
