--- a/template/ReviewCart.html
+++ b/template/ReviewCart.html
@@ -188,10 +188,10 @@
 					j$().toastmessage('showNoticeToast','Cart status has been updated');
 					
 					// reload this page
-					setTimeout(function() {  
-						window.location.reload();
+					//setTimeout(function() {  
+					//	window.location.reload();
 						//window.history.go(-1);
-					}, 3000)
+					//}, 3000)
 					
 				}
 			);			
@@ -246,9 +246,9 @@
 					}
 					
 					// reload this page
-					setTimeout(function() {  
-						window.location.reload();
-					}, 3000)
+					//setTimeout(function() {  
+					//	window.location.reload();
+					//}, 3000)
 				}
 			);	
 		});
