--- a/template/ManageCartAsBuyer.html
+++ b/template/ManageCartAsBuyer.html
@@ -20,10 +20,10 @@
 					j$().toastmessage('showNoticeToast','Cart status has been updated');
 					
 					// back to previous page
-					setTimeout(function() {  
-						window.location.reload();
+					//setTimeout(function() {  
+					//	window.location.reload();
 						//window.history.go(-1);
-					}, 3000)
+					//}, 3000)
 					
 				}
 			);			
@@ -80,9 +80,9 @@
 					}
 					
 					// reload this page
-					setTimeout(function() {  
-						window.location.reload();
-					}, 3000)
+					//setTimeout(function() {  
+					//	window.location.reload();
+					//}, 3000)
 				}
 			);	
 		});			
