--- a/template/PublishNewBuyOrder.html
+++ b/template/PublishNewBuyOrder.html
@@ -105,11 +105,11 @@
 		}
 			    
     	// Google account
-    	// crunchtime.boston@gmail.com, xf123456, recovery email fxia@crunchtime.com
-    	var api_key='AIzaSyCdLMtJEh8-2kj3nMBm-ua2jv16pZOOQtw';
+    	// anthem.market.place@gmail.com, anthem123456, recovery email an.banana.slug@gmail.com
+    	var api_key='AIzaSyDooQcg6OO8AYa1Oc_aVJX31DFHXaMr5b8';
     	
     	// search engine www.amazon.com
-    	var cse='009241380053733508161:wo30_ax0jak';
+    	var cse='016432411100893507841:y0sw886dln8';
     	var url=encodeURI('https://www.googleapis.com/customsearch/v1?key='+api_key+'&cx='+cse+'&searchType=image&imgSize=large&safe=high&num='+googleSearchStep+'&start='+googleSearchStart+'&q='+term);
     	
     	// reset input boxes
