--- a/template/base.html
+++ b/template/base.html
@@ -220,7 +220,9 @@
 <div class="header">
 	<table class="header-layout">
 	<tr><td>
-	<h4>Anthem Market Place</h4>
+	<a href="/">
+		<h4>Anthem Market Place</h4>
+	</a>
 	</td><td>
 	<span class="level-1-navigation">
 		<ul>		
