--- a/template/ReportMySeller.html
+++ b/template/ReportMySeller.html
@@ -88,12 +88,13 @@
 {% endblock %}
 
 {% block main %}
-<h1>Seller Report</h1>
+<h1>Vendor Report</h1>
 
 
 <p>
-Seller report helps you find out from whom you have been purchasing, and how they have been handling your business.
-In addition, you can give your buyers feedbacks and rate them based on your experience.
+Who are my best vendors and how important are they to my business? 
+Vendor report weights them to your deal flows so you can manage vendor relationship
+to get the best deals.
 </p>
 
 	
