--- a/template/ReportBase.html
+++ b/template/ReportBase.html
@@ -8,16 +8,16 @@
 			<a href="/report/buyorder/7/" title="Your sales reports">
 				<img src="http://cdn2.iconfinder.com/data/icons/picons-essentials/71/discount-128.png"/>
 			</a>
-			<h3>My Sales</h3>
+			<h3>Products</h3>
 		</li>
 		{% endif %}
 		
 		{% if me.can_be_doc() %}
 		<li id="nav-report-myseller">
 			<a href="/report/myseller/7/" title="Your seller reports">
-				<img src="http://cdn2.iconfinder.com/data/icons/picons-essentials/71/discount-128.png"/>
+				<img src="http://cdn3.iconfinder.com/data/icons/people-icons/64/Group_of_People-128.png"/>
 			</a>
-			<h3>My Sellers</h3>
+			<h3>Vendors</h3>
 		</li>
 		{% endif %}
 
