Add a income report showing contact cash account balance over time period.

--- a/template/ReportBase.html
+++ b/template/ReportBase.html
@@ -19,6 +19,13 @@
 			</a>
 			<h3>Vendors</h3>
 		</li>
+
+		<li id="nav-report-myincome">
+			<a href="/report/myincome/7/" title="Your income reports">
+				<img src="http://cdn3.iconfinder.com/data/icons/block/32/check_money-128.png"/>
+			</a>
+			<h3>Income</h3>
+		</li>
 		{% endif %}
 
 	</ul>
