--- a/template/BrowseBuyOrderByOwner.html
+++ b/template/BrowseBuyOrderByOwner.html
@@ -36,49 +36,52 @@
 			<ul>
 		</div>
 		
-		<table class="table-row-border">
-		<thead>
-			<tr><td>
-				</td><td>Product
-				</td><td>Price
-				</td><td>WTB Qty
-				</td><td class="computed">Filled Qty
-				</td><td class="computed">Approved Qty
-				</td><td class="computed">Unfilled Qty
-				</td><td class="computed">Category
-				</td>
-			</tr>
-		</thead>
-		<tbody>
-			{% for o in orders %}
-			<tr><td>
-					<a href="/buyorder/browse/{{ o.key.id() }}/">
-						<img src="{{ o.image }}" style="height:50px;padding:10px;max-width:50px;" class="box-shadow"/>
-					</a>
-				</td><td>
-					{{ o.name }}
-				</td><td>
-					{{ o.price }}
-				</td><td>
-					{{ o.qty }}
-				</td><td class="computed">
-					{{ o.filled_qty }}
-				</td><td class="computed">
-					{{ o.approved_qty }}
-				</td><td class="computed">
-					{{ o.unfilled_qty }}
-				</td><td class="computed">
-					<ul class="tags">
-					{% for q in o.queues|sort %}
-						<li><a href="/buyorder/owner/{{ owner }}/{{ q }}/">{{ q|title }}</a></li>			
-					{% endfor %}
-					</ul>
-				</td>
-			</tr>
-			{% endfor %}
-		</tbody>
-		</table>
-		
+		{% if orders.count() > 0 %}
+			<table class="table-row-border">
+			<thead>
+				<tr><td>
+					</td><td>Product
+					</td><td>Price
+					</td><td>WTB Qty
+					</td><td class="computed">Filled Qty
+					</td><td class="computed">Approved Qty
+					</td><td class="computed">Unfilled Qty
+					</td><td class="computed">Category
+					</td>
+				</tr>
+			</thead>
+			<tbody>
+				{% for o in orders %}
+				<tr><td>
+						<a href="/buyorder/browse/{{ o.key.id() }}/">
+							<img src="{{ o.image }}" style="height:50px;padding:10px;max-width:50px;" class="box-shadow"/>
+						</a>
+					</td><td>
+						{{ o.name }}
+					</td><td>
+						{{ o.price }}
+					</td><td>
+						{{ o.qty }}
+					</td><td class="computed">
+						{{ o.filled_qty }}
+					</td><td class="computed">
+						{{ o.approved_qty }}
+					</td><td class="computed">
+						{{ o.unfilled_qty }}
+					</td><td class="computed">
+						<ul class="tags">
+						{% for q in o.queues|sort %}
+							<li><a href="/buyorder/owner/{{ owner }}/{{ q }}/">{{ q|title }}</a></li>			
+						{% endfor %}
+						</ul>
+					</td>
+				</tr>
+				{% endfor %}
+			</tbody>
+			</table>
+		{% else %}
+			<h4>Your inventory is empty. Go <a href="/buyorder/new">add some products</a>!
+		{%  endif %}			
 	{% else %}
 		<!-- placeholder: import a NO-FOUND page -->
 		{% if me.can_be_doc() and me.key.id()==owner %}
