--- a/template/ReportMyIncome.html
+++ b/template/ReportMyIncome.html
@@ -16,7 +16,7 @@
 			}
 		});
 		
-		var data=j$.parseJSON('{{ data }}');
+		var data=j$.parseJSON("{{ data }}");
         j$('#container').highcharts({
             chart: {
                 type: 'line',
