--- a/template/PublishNewBuyOrder.html
+++ b/template/PublishNewBuyOrder.html
@@ -276,8 +276,6 @@
 		// filled_qty represents items in our pipeline even some we have not approved
 		{% if order %}
 		j$('#input-qty').change(function(){
-			console.log({{ order.filled_qty }});
-			
 			var qty=j$(this).val();
 			var filled={{ order.filled_qty }};
 			if (qty<filled){
@@ -490,6 +488,7 @@ items to give you a starting point for your listing.
 			<div style="float:right;">
 			{% if order %}
 				<div class="ariel-button" style="margin-top:15px;">
+					<input name="order_id" value="{{ order.key.id() }}" style="display:none;"/>
 					<input style="border:none;background:transparent;" type="submit" value="Save" />
 				</div>
 			{% else %}
@@ -497,6 +496,7 @@ items to give you a starting point for your listing.
 				<div class="ariel-button" style="margin-top:15px;">
 					<input style="border:none;background:transparent;" type="submit" value="Publish" />
 				</div>
+				<input name="order_id" value="{{ order.key.id() }}" style="display:none;"/>
 			{% endif %}
 			</div>
 		</div>		
