--- a/template/base.html
+++ b/template/base.html
@@ -353,7 +353,7 @@
 </li>
 
 <li>
-	<a href="mailto:anthem.marketplace@gmail.com">Contact Us</a>
+	<a href="mailto:anthem.marketplace@gmail.com">Contact Us @admin</a>
 </li>
 <li>
 	<a href="">Term of Service</a>
