--- a/template/PublishNewBuyOrder.html
+++ b/template/PublishNewBuyOrder.html
@@ -496,7 +496,7 @@ items to give you a starting point for your listing.
 				<div class="ariel-button" style="margin-top:15px;">
 					<input style="border:none;background:transparent;" type="submit" value="Publish" />
 				</div>
-				<input name="order_id" value="{{ order.key.id() }}" style="display:none;"/>
+				<input name="order_id" value="" style="display:none;"/>
 			{% endif %}
 			</div>
 		</div>		
