--- a/template/Home.html
+++ b/template/Home.html
@@ -13,10 +13,13 @@
 	<!-- printers -->
 	<div class="home-marketing-section">
 		<div style="width:30%;position:absolute;right:50px;color:#88c;z-index:99;">
-			<div style="font-size:3.5em;">
+			<div style="font-size:3.5em;margin-top:33%;">
 			<h1>ANTHEM MARKET PLACE</h1>
 			</div>
+			<div style="text-align:right;">
 			Make Deals Easy
+			</div>
+			
 			<a href="/buyorder/browse">
 			<div class="get-started-button">Get Started</div>
 			</a>
